syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "Serasa";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service SerasaGrpcService {
  rpc verificarSituacaoDoCliente(SituacaoDoClienteRequest) returns (SituacaoDoClienteResponse) {}
}

message ErrorDetails{
  int32 code = 1;
  string message = 2;
  repeated string messages = 3;
}
message SituacaoDoClienteRequest {
  string cpf = 1;
}

message SituacaoDoClienteResponse {
  enum Situacao {
    DESCONHECIDA = 0;
    REGULAR      = 1;
    IRREGULAR    = 2;
  }

  Situacao situacao = 1;
}